manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-practice
  template:
    metadata:
      labels:
        app: cloud-practice
    spec:
      containers:
        - name: cloud-practice
          image: cepgstapacr.azurecr.io/82240941:latest
          ports:
            - containerPort: 8080
